[package]
name = "ffscan"
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "Fast directory & process scanner: scan large files/folders, list/kill processes, and print system info."
readme = "README.md"
repository = "https://github.com/swap72/ffscan"
homepage = "https://github.com/swap72/ffscan"
categories = ["command-line-utilities", "filesystem", "os"]
keywords = ["cli", "scanner", "filesystem", "process", "sysinfo"]

[dependencies]
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
